# ilass

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix
.github/workflows/: ci.yml  release.yaml
ilass/: Cargo.toml  README.md
ilass-cli/: Cargo.toml
ilass-cli/examples/: generate_statistics_from_database.rs
ilass-cli/src/: errors.rs  lib.rs  main.rs
ilass-cli/src/video_decoder/: ffmpeg_binary.rs  ffmpeg_library.rs  mod.rs
ilass-core/: Cargo.toml  README.md
ilass-core/src/: rating_type.rs  time_types.rs
ilass/src/: ilass.rs  lib.rs  rating_type.rs  segments.rs  time_types.rs  timespan_ops.rs
