[workspace]
members = ["ilass", "ilass-cli"]
resolver = "3"

[workspace.package]
authors = ["kaegi <kaegi.dev@gmail.com>", "Sandro Marques <me@sandro.dev>"]
edition = "2024"
keywords = ["subtitle", "align", "automatic", "api", "tool"]
license = "AGPL-3"
repository = "https://github.com/SandroHc/ilass"
version = "2.1.0"

[workspace.dependencies]
ilass = { path = "ilass", version = "2.1.0" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3