[package]
name = "ilass-cli"
description = "CLI tool for synchronizing subtitles"
documentation = "https://docs.rs/ilass-cli"
readme = "../README.md"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "ilass"
path = "src/main.rs"

[features]
default = ["ffmpeg-binary"]

# use exactly one of these two features
ffmpeg-binary = ["byteorder"] 
# FFMPEG-LIB ffmpeg-library = ["ffmpeg-sys"]


[dependencies]
ilass.workspace = true
webrtc-vad = "0.4.0"
subparse = "0.7.0"

clap = "2.33.0"
pbr = "1.0.0-alpha.2"
encoding_rs = "0.8.17"
libc = "0.2.60"
failure = "0.1.5"
serde_json = "1.0.40"
serde = { version = "1.0.98", features = ["derive", "rc"] }
byteorder = { version = "1.3.2", optional = true }

[dev-dependencies]
rmp-serde = "0.14.0"
threadpool = "1.7.1"
ctrlc = "3.1.3"
rand = "0.7.2"

# FFMPEG-LIB [dependencies.ffmpeg-sys]
# FFMPEG-LIB optional = true
# FFMPEG-LIB git = "https://github.com/meh/rust-ffmpeg-sys"
# FFMPEG-LIB rev = "4f14151b9b8134f1f029d49d02cbea5c7337dedb"
