[package]
name = "ilass"
description = "Library for synchronizing subtitles"
documentation = "https://docs.rs/ilass"
readme = "README.md"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

# In nosplit mode, the most expensive operation is sorting of sorted
# vectors. In runtime analysis, using a heap-sort-like algorithm
# is more performant than assuming a large unsorted array. In
# tests it is only half as fast. (1s vs 2s)
nosplit-heap-sort = []

[dependencies]

[dev-dependencies]
rand = "0.7"
